fix: python api ssl certificate

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,6 @@ version: "3"
 
 services:
   api-ruby:
-    image: linkextractor-api:step6-ruby
     build: ./ruby/api
     ports:
       - "4567:4567"
@@ -10,14 +9,17 @@ services:
       - REDIS_URL=redis://redis-rb:6379
     volumes:
       - ./ruby/logs:/app/logs
+    depends_on:
+      - redis-rb
 
   api-python:
-    image: linkextractor-api:step5-python
     build: ./python/api
     ports:
       - "5000:5000"
     environment:
       - REDIS_URL=redis://redis-py:6379
+    depends_on:
+      - redis-py
 
   redis-py:
     image: redis
@@ -29,5 +31,7 @@ services:
     volumes:
       - ./locustfile.py:/mnt/locust/locustfile.py
     command: -f /mnt/locust/locustfile.py --host=http://api-python:5000
+    # command: -f /mnt/locust/locustfile.py --host=http://api-ruby:4567
     ports:
       - "8089:8089"
+# variar: quantidade de usuários, cache e versão (ruby ou python), gerar gráficos para cada uma das combinações
